erental_home_complete

--- a/index.html
+++ b/index.html
@@ -495,15 +495,15 @@
                         <div class="eq_footer_col">
                           <h2><a href="#"><span class="flaticon-road-roller flaticon"></span><span>Ariel Rental </span></a></h2>
                           <p>Far far away, behind the word mountains, far from the countries.</p>
-                          <ul>
+                          <ul class="eq_ul_intro_brand">
                             <li>
-                              <a href="#"><span class="fa fa-twitter"></span></a>
+                              <a href="#"><i class="fa-brands fa-twitter"></i></a>
                             </li>
                             <li>
-                              <a href="#"><span class="fa fa-facebook"></span></a>
+                              <a href="#"><i class="fa-brands fa-facebook-f"></i></span></a>
                             </li>
                             <li>
-                              <a href="#"><span class="fa fa-instagram"></span></a>
+                              <a href="#"><i class="fa-brands fa-instagram"></i></a>
                             </li>
                           </ul>
                         </div>
